[package]
name = "dab"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.14"

[dependencies]
bitvec = "1"
libm = "0.2.8"
rustfft = "6.2.0"
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.13.0"
pretty-hex = "0.4.1"
rand = "0.9.2"
modular-bitfield = "0.11.2"
bilge = "0.2.0"
binrw = "0.14.1"

[profile.release]
debug = true

[lib]
name = "dab"
path = "src/lib.rs"

[[bin]]
name = "dab-cli"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "viterbi_bench"
harness = false