[package]
name = "dab"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.14"

[dependencies]
bitvec = "1"
libm = "0.2.8"
rustfft = "6.2.0"
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.13.0"
pretty-hex = "0.4.1"
rand = "0.9.2"
criterion = "0.7.0"

[profile.release]
debug = true
